<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editNote"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditNoteActivity">

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/noteTitle"
        android:inputType="text"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etNoteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content"
        android:inputType="text"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/editNote_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editNote"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"/>

</LinearLayout>